@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.1.0" provider-name="Twilight0">
+<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.2.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="1.4.1"/>
@@ -18,11 +18,12 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.video.streamlink-tester</source>
         <size>106257</size>
-        <news>[B]1.1.0[/B] - 04-06-2018
-- Added &amp;quality= plugin route call for manual quality selection (overrides setting in options)
-- Added MPEG-DASH playback capability
-- Added MPEG-DASH url output for resolved urls through streamlink
-- Improved README.md</news>
+        <news>[B]1.2.0[/B] - 10-06-2018
+- Added headers append into stream url when custom args are present in streamlink's stream object
+- Replaced .url property with to_url function call
+- Added context menu item to clear history in main menu
+- Added context menu item to delete individual urls from main menu
+- Do not allow duplicates in history</news>
         <assets>
             <icon>icon.png</icon>
         </assets>
